[gd_scene load_steps=3 format=1]

[ext_resource path="res://Resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://Einstellungen/BereicheInput.gd" type="Script" id=2]

[node name="BereicheInput" type="Button"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 3.0
margin/right = 54.0
margin/bottom = 103.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "?"
flat = false
script/script = ExtResource( 2 )

[node name="PopupPanel" type="PopupPanel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1700.0
margin/bottom = 900.0
popup/exclusive = false

[node name="Container" type="VBoxContainer" parent="PopupPanel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 14.0
margin/right = 815.0
margin/bottom = 475.0
alignment = 0

[node name="Ueberschrift" type="Label" parent="PopupPanel/Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 815.0
margin/bottom = 94.0
text = "?"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BereicheContainer" type="VBoxContainer" parent="PopupPanel/Container"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 98.0
margin/right = 815.0
margin/bottom = 98.0
alignment = 0

[node name="AddRemoveContainer" type="HBoxContainer" parent="PopupPanel/Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 102.0
margin/right = 815.0
margin/bottom = 202.0
alignment = 0

[node name="AddButton" type="Button" parent="PopupPanel/Container/AddRemoveContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 79.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "+"
flat = false
align = 0

[node name="RemoveButton" type="Button" parent="PopupPanel/Container/AddRemoveContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 83.0
margin/top = 0.0
margin/right = 174.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = " - "
flat = false
align = 2

[node name="VSlider" type="VSlider" parent="PopupPanel"]

rect/scale = Vector2( 5, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 1538.0
margin/top = 70.0
margin/right = 1554.0
margin/bottom = 408.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[connection signal="pressed" from="." to="." method="_on_DachdimensionInput_pressed"]

[connection signal="popup_hide" from="PopupPanel" to="." method="_on_PopupPanel_popup_hide"]

[connection signal="pressed" from="PopupPanel/Container/AddRemoveContainer/AddButton" to="." method="_on_AddButton_pressed"]

[connection signal="pressed" from="PopupPanel/Container/AddRemoveContainer/RemoveButton" to="." method="_on_RemoveButton_pressed"]

[connection signal="value_changed" from="PopupPanel/VSlider" to="." method="_on_slider_value_changed"]


